# safe-read

./: .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  README.md  deny.toml  mkdocs.yml  release-plz.toml  renovate.json  rust-toolchain.toml
.github/workflows/: ci.yml  release-plz.yml
docs/: PRD.md  index.md  privacy.md  terms.md
docs/decisions/: 0001-panic-free-benign-default-readers.md  0002-one-shared-crate-not-per-crate-bytes-rs.md  0003-plain-and-try-reader-twins.md  0004-minimal-safe-leaf-no-std-zero-dep-forbid-unsafe.md  0005-low-verified-msrv-floor.md  0006-fuzzing-proves-the-never-panic-invariant.md  0007-scope-fixed-width-integer-fields-only.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: readers.rs
src/: lib.rs
supply-chain/: config.toml
